fix: z-index for popups

--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,6 +2,7 @@
   width: calc(100% - 200px * 2);
   min-width: 320px;
   max-width: 880px;
+  background-color: #000;
 }
 
 @media all and (max-width: 1024px) {
