--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -5,6 +5,7 @@
   align-items: center;
   /* вырываем из потока */
   position: fixed;
+  z-index: -1;
   right: 0;
   top: 0;
   left: 0;
